--- a/src/pages/components/accordion.mdx
+++ b/src/pages/components/accordion.mdx
@@ -3,8 +3,8 @@ title: "Accordion"
 draft: false
 ---
 
-<section class="mt-10 mx-32">
-  <h2 class="lg:mb-8 lg:text-4xl text-center">Our Services</h2>
+<section class="mt-10 mx-2 lg:mx-32 xl:mx-32 2xl:mx-32">
+  <h2 class="mb-6 lg:mb-8 lg:text-4xl text-center">Our Services</h2>
   <div class="mb-1">
     <Accordion client:load title="01. GenAI Strategy Development">
       <section class="px-6 py-14">
