--- a/src/content/careers/-index.mdx
+++ b/src/content/careers/-index.mdx
@@ -7,151 +7,140 @@ benifits:
   description: Delivering Innovative AI Applications for Growth, Efficiency, and Competitive Advantage
   benifit_list:
     - title: 01. Fintech
-      subtitle: "In the fintech sector, AI is revolutionizing financial services by enhancing security, improving customer experiences, and optimizing operations. Key applications include:"
-      content: "
-      • Fraud detection and prevention using advanced pattern recognition
-      • Risk assessment and credit scoring with machine learning algorithms
-      • Algorithmic trading and portfolio management
-      • Personalized financial advice and robo-advisors
-      • Automated customer service through AI-powered chatbots
-      • Anti-money laundering (AML) and Know Your Customer (KYC) processes
-      "
+      content: "In the fintech sector, AI is revolutionizing financial services by enhancing security, improving customer experiences, and optimizing operations. Key applications include:"
+      list:
+        - Fraud detection and prevention using advanced pattern recognition
+        - Risk assessment and credit scoring with machine learning algorithms
+        - Algorithmic trading and portfolio management
+        - Personalized financial advice and robo-advisors
+        - Automated customer service through AI-powered chatbots
+        - Anti-money laundering (AML) and Know Your Customer (KYC) processes
       color: "#24A1FF"
       icon: briefcase #icon package react-feather-icon [https://feathericons.com]
     - title: 02. E-commerce
-      subtitle: "AI is transforming the e-commerce landscape by personalizing shopping experiences and optimizing operations. Key applications include:"
-      content: "
-      • Personalized product recommendations based on user behavior and preferences
-      • Dynamic pricing strategies using real-time market data
-      • Virtual try-on experiences using augmented reality (AR) and AI
-      • Inventory management and demand forecasting
-      • Visual search capabilities for product discovery
-      • Chatbots for customer support and sales assistance
-      • Fraud detection in online transactions
-      "
+      content: "AI is transforming the e-commerce landscape by personalizing shopping experiences and optimizing operations. Key applications include:"
+      list:
+        - Personalized product recommendations based on user behavior and preferences
+        - Dynamic pricing strategies using real-time market data
+        - Virtual try-on experiences using augmented reality (AR) and AI
+        - Inventory management and demand forecasting
+        - Visual search capabilities for product discovery
+        - Chatbots for customer support and sales assistance
+        - Fraud detection in online transactions
       color: "#7B5AFF"
       icon: aperture #icon package react-feather-icon [https://feathericons.com]
     - title: 03. Healthcare
-      subtitle: "In healthcare, AI is improving patient care, streamlining operations, and accelerating medical research. Key applications include:"
-      content: "
-      • Diagnostic assistance using image recognition and natural language processing
-      • Predictive analytics for early disease detection and prevention
-      • Personalized treatment plans based on genetic and health data
-      • Drug discovery and development acceleration
-      • Remote patient monitoring and telemedicine solutions
-      • Hospital resource management and patient flow optimization
-      • Medical record analysis and insights generation
-      "
+      content: "In healthcare, AI is improving patient care, streamlining operations, and accelerating medical research. Key applications include:"
+      list:
+        - Diagnostic assistance using image recognition and natural language processing
+        - Predictive analytics for early disease detection and prevention
+        - Personalized treatment plans based on genetic and health data
+        - Drug discovery and development acceleration
+        - Remote patient monitoring and telemedicine solutions
+        - Hospital resource management and patient flow optimization
+        - Medical record analysis and insights generation
       color: "#FDC528"
       icon: umbrella  #icon package react-feather-icon [https://feathericons.com]
     - title: 04. Manufacturing
-      subtitle: "AI is driving the fourth industrial revolution in manufacturing, enhancing efficiency and product quality. Key applications include:"
-      content: "
-      • Predictive maintenance to reduce equipment downtime
-      • Quality control and defect detection using computer vision
-      • Supply chain optimization and demand forecasting
-      • Generative design for product development
-      • Robot-human collaboration in assembly lines
-      • Energy consumption optimization in production processes
-      • Inventory management and logistics optimization
-      "
+      content: "AI is driving the fourth industrial revolution in manufacturing, enhancing efficiency and product quality. Key applications include:"
+      list:
+        - Predictive maintenance to reduce equipment downtime
+        - Quality control and defect detection using computer vision
+        - Supply chain optimization and demand forecasting
+        - Generative design for product development
+        - Robot-human collaboration in assembly lines
+        - Energy consumption optimization in production processes
+        - Inventory management and logistics optimization
       color: "#FF5874"
       icon: clock  #icon package react-feather-icon [https://feathericons.com]
     - title: 05. Marketing
-      subtitle: "AI is revolutionizing marketing by enabling hyper-personalization and data-driven decision making. Key applications include:"
-      content: "
-      • Customer segmentation and targeting using advanced analytics
-      • Content generation for ads, social media, and websites
-      • Predictive analytics for campaign performance optimization
-      • Sentiment analysis for brand reputation management
-      • Chatbots for customer engagement and lead qualification
-      • Dynamic pricing and promotional strategies
-      • Cross-channel marketing optimization
-      "
+      content: "AI is revolutionizing marketing by enabling hyper-personalization and data-driven decision making. Key applications include:"
+      list:
+        - Customer segmentation and targeting using advanced analytics
+        - Content generation for ads, social media, and websites
+        - Predictive analytics for campaign performance optimization
+        - Sentiment analysis for brand reputation management
+        - Chatbots for customer engagement and lead qualification
+        - Dynamic pricing and promotional strategies
+        - Cross-channel marketing optimization
       color: "#12E189"
       icon: plusSquare  #icon package react-feather-icon [https://feathericons.com]
     - title: 06. Energy and Utilities
-      subtitle: "In the energy sector, AI is driving efficiency, sustainability, and grid management. Key applications include:"
-      content: "
-      • Smart grid management and optimization
-      • Energy demand forecasting and load balancing
-      • Predictive maintenance for power generation equipment
-      • Renewable energy integration and management
-      • Energy consumption analysis and optimization for consumers
-      • Fraud detection in energy consumption
-      • Autonomous drone inspections for infrastructure
-      "
+      content: "In the energy sector, AI is driving efficiency, sustainability, and grid management. Key applications include:"
+      list:
+        - Smart grid management and optimization
+        - Energy demand forecasting and load balancing
+        - Predictive maintenance for power generation equipment
+        - Renewable energy integration and management
+        - Energy consumption analysis and optimization for consumers
+        - Fraud detection in energy consumption
+        - Autonomous drone inspections for infrastructure
       color: "#E545FF"
       icon: barChart  #icon package react-feather-icon [https://feathericons.com]
     - title: 07. Automotive
-      subtitle: "AI is driving innovation in the automotive industry, from manufacturing to autonomous vehicles. Key applications include:"
-      content: "
-      • Autonomous driving systems and advanced driver assistance
-      • Predictive maintenance for vehicle fleets
-      • In-car AI assistants for enhanced user experience
-      • Supply chain and inventory optimization
-      • Design and simulation for vehicle development
-      • Quality control in manufacturing processes
-      • Traffic flow optimization and smart city integration
-      "
+      content: "AI is driving innovation in the automotive industry, from manufacturing to autonomous vehicles. Key applications include:"
+      list:
+        - Autonomous driving systems and advanced driver assistance
+        - Predictive maintenance for vehicle fleets
+        - In-car AI assistants for enhanced user experience
+        - Supply chain and inventory optimization
+        - Design and simulation for vehicle development
+        - Quality control in manufacturing processes
+        - Traffic flow optimization and smart city integration
       color: "#E545FF"
       icon: barChart  #icon package react-feather-icon [https://feathericons.com]
     - title: 08. Edtech
-      subtitle: "AI is transforming education by personalizing learning experiences and improving educational outcomes. Key applications include:"
-      content: "
-      • Adaptive learning platforms that adjust to individual student needs
-      • Automated grading and feedback systems
-      • Intelligent tutoring systems and virtual teaching assistants
-      • Learning analytics for performance tracking and intervention
-      • Content recommendation for personalized learning paths
-      • Language learning apps with speech recognition and natural language processing
-      • Plagiarism detection and academic integrity tools
-      "
+      content: "AI is transforming education by personalizing learning experiences and improving educational outcomes. Key applications include:"
+      list:
+        - Adaptive learning platforms that adjust to individual student needs
+        - Automated grading and feedback systems
+        - Intelligent tutoring systems and virtual teaching assistants
+        - Learning analytics for performance tracking and intervention
+        - Content recommendation for personalized learning paths
+        - Language learning apps with speech recognition and natural language processing
+        - Plagiarism detection and academic integrity tools
       color: "#E545FF"
       icon: barChart  #icon package react-feather-icon [https://feathericons.com]
     - title: 09. Legal
-      subtitle: "In the legal sector, AI is streamlining processes and enhancing decision-making. Key applications include:"
-      content: "
-      • Legal document review and analysis
-      • Contract analysis and management
-      • Legal research assistance and case law analysis
-      • Predictive analytics for case outcomes
-      • Due diligence automation in mergers and acquisitions
-      • Compliance monitoring and risk assessment
-      • Intellectual property management and patent analysis
-      "
+      content: "In the legal sector, AI is streamlining processes and enhancing decision-making. Key applications include:"
+      list:
+        - Legal document review and analysis
+        - Contract analysis and management
+        - Legal research assistance and case law analysis
+        - Predictive analytics for case outcomes
+        - Due diligence automation in mergers and acquisitions
+        - Compliance monitoring and risk assessment
+        - Intellectual property management and patent analysis
       color: "#E545FF"
       icon: barChart  #icon package react-feather-icon [https://feathericons.com]
     - title: 10. Logistics
-      subtitle: "AI is optimizing supply chains and transforming logistics operations. Key applications include:"
-      content: "
-      • Route optimization for delivery and transportation
-      • Demand forecasting and inventory management
-      • Warehouse automation and robotics
-      • Real-time tracking and visibility of shipments
-      • Predictive maintenance for fleet vehicles
-      • Last-mile delivery optimization
-      • Supply chain risk assessment and mitigation
-      "
+      content: "AI is optimizing supply chains and transforming logistics operations. Key applications include:"
+      list:
+        - Route optimization for delivery and transportation
+        - Demand forecasting and inventory management
+        - Warehouse automation and robotics
+        - Real-time tracking and visibility of shipments
+        - Predictive maintenance for fleet vehicles
+        - Last-mile delivery optimization
+        - Supply chain risk assessment and mitigation
       color: "#E545FF"
       icon: barChart  #icon package react-feather-icon [https://feathericons.com]
     - title: 11. Media and Entertainment
-      subtitle: "AI is revolutionizing content creation, distribution, and audience engagement in media and entertainment. Key applications include:"
-      content: "
-      • Content recommendation systems for streaming platforms
-      • Automated content creation (e.g., news articles, video summaries)
-      • Personalized advertising and product placement
-      • Voice and facial recognition for content tagging and search
-      • Deep fake detection and content authenticity verification
-      • Automated video editing and post-production
-      • Audience sentiment analysis and trend prediction
-      "
+      content: "AI is revolutionizing content creation, distribution, and audience engagement in media and entertainment. Key applications include:"
+      list:
+        - Content recommendation systems for streaming platforms
+        - Automated content creation (e.g., news articles, video summaries)
+        - Personalized advertising and product placement
+        - Voice and facial recognition for content tagging and search
+        - Deep fake detection and content authenticity verification
+        - Automated video editing and post-production
+        - Audience sentiment analysis and trend prediction
       color: "#E545FF"
       icon: barChart  #icon package react-feather-icon [https://feathericons.com]
 # career single sidebar
-sidebar_content:
+sidebar_list:
   title: Apply today
-  content: Management, investments. You’ll be on arguably the most important position at the company the front lines helping
+  list: Management, investments. You’ll be on arguably the most important position at the company the front lines helping
   button:
     label: Apply Now
     link: "#"
@@ -161,5 +150,5 @@ sidebar_content:
 # career page
 career:
   title: Open positions
-  subtitle: Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor amet, consectetur <br/> adipiscing elit. Praesent sapien massa, convallis
+  content: Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor amet, consectetur <br/> adipiscing elit. Praesent sapien massa, convallis
 ---
