`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/content/careers/-index.mdx
+++ b/src/content/careers/-index.mdx
@@ -16,7 +16,7 @@ benifits:
         - Automated customer service through AI-powered chatbots
         - Anti-money laundering (AML) and Know Your Customer (KYC) processes
       color: "#24A1FF"
-      icon: briefcase #icon package react-feather-icon [https://feathericons.com]
+      icon: dollarSign #icon package react-feather-icon [https://feathericons.com]
     - title: 02. E-commerce
       content: "AI is transforming the e-commerce landscape by personalizing shopping experiences and optimizing operations. Key applications include:"
       list:
@@ -28,7 +28,7 @@ benifits:
         - Chatbots for customer support and sales assistance
         - Fraud detection in online transactions
       color: "#7B5AFF"
-      icon: aperture #icon package react-feather-icon [https://feathericons.com]
+      icon: shoppingCart #icon package react-feather-icon [https://feathericons.com]
     - title: 03. Healthcare
       content: "In healthcare, AI is improving patient care, streamlining operations, and accelerating medical research. Key applications include:"
       list:
@@ -39,8 +39,8 @@ benifits:
         - Remote patient monitoring and telemedicine solutions
         - Hospital resource management and patient flow optimization
         - Medical record analysis and insights generation
-      color: "#FDC528"
-      icon: umbrella  #icon package react-feather-icon [https://feathericons.com]
+      color: "#FF5874"
+      icon: activity  #icon package react-feather-icon [https://feathericons.com]
     - title: 04. Manufacturing
       content: "AI is driving the fourth industrial revolution in manufacturing, enhancing efficiency and product quality. Key applications include:"
       list:
@@ -51,8 +51,8 @@ benifits:
         - Robot-human collaboration in assembly lines
         - Energy consumption optimization in production processes
         - Inventory management and logistics optimization
-      color: "#FF5874"
-      icon: clock  #icon package react-feather-icon [https://feathericons.com]
+      color: "#FDC528"
+      icon: settings  #icon package react-feather-icon [https://feathericons.com]
     - title: 05. Marketing
       content: "AI is revolutionizing marketing by enabling hyper-personalization and data-driven decision making. Key applications include:"
       list:
@@ -64,7 +64,7 @@ benifits:
         - Dynamic pricing and promotional strategies
         - Cross-channel marketing optimization
       color: "#12E189"
-      icon: plusSquare  #icon package react-feather-icon [https://feathericons.com]
+      icon: volume2  #icon package react-feather-icon [https://feathericons.com]
     - title: 06. Energy and Utilities
       content: "In the energy sector, AI is driving efficiency, sustainability, and grid management. Key applications include:"
       list:
@@ -76,7 +76,7 @@ benifits:
         - Fraud detection in energy consumption
         - Autonomous drone inspections for infrastructure
       color: "#E545FF"
-      icon: barChart  #icon package react-feather-icon [https://feathericons.com]
+      icon: battery  #icon package react-feather-icon [https://feathericons.com]
     - title: 07. Automotive
       content: "AI is driving innovation in the automotive industry, from manufacturing to autonomous vehicles. Key applications include:"
       list:
@@ -87,8 +87,8 @@ benifits:
         - Design and simulation for vehicle development
         - Quality control in manufacturing processes
         - Traffic flow optimization and smart city integration
-      color: "#E545FF"
-      icon: barChart  #icon package react-feather-icon [https://feathericons.com]
+      color: "#4A90E2"
+      icon: truck  #icon package react-feather-icon [https://feathericons.com]
     - title: 08. Edtech
       content: "AI is transforming education by personalizing learning experiences and improving educational outcomes. Key applications include:"
       list:
@@ -99,8 +99,8 @@ benifits:
         - Content recommendation for personalized learning paths
         - Language learning apps with speech recognition and natural language processing
         - Plagiarism detection and academic integrity tools
-      color: "#E545FF"
-      icon: barChart  #icon package react-feather-icon [https://feathericons.com]
+      color: "#50E3C2"
+      icon: bookOpen  #icon package react-feather-icon [https://feathericons.com]
     - title: 09. Legal
       content: "In the legal sector, AI is streamlining processes and enhancing decision-making. Key applications include:"
       list:
@@ -111,8 +111,8 @@ benifits:
         - Due diligence automation in mergers and acquisitions
         - Compliance monitoring and risk assessment
         - Intellectual property management and patent analysis
-      color: "#E545FF"
-      icon: barChart  #icon package react-feather-icon [https://feathericons.com]
+      color: "#F5A623"
+      icon: shield  #icon package react-feather-icon [https://feathericons.com]
     - title: 10. Logistics
       content: "AI is optimizing supply chains and transforming logistics operations. Key applications include:"
       list:
@@ -123,8 +123,8 @@ benifits:
         - Predictive maintenance for fleet vehicles
         - Last-mile delivery optimization
         - Supply chain risk assessment and mitigation
-      color: "#E545FF"
-      icon: barChart  #icon package react-feather-icon [https://feathericons.com]
+      color: "#7ED321"
+      icon: package  #icon package react-feather-icon [https://feathericons.com]
     - title: 11. Media and Entertainment
       content: "AI is revolutionizing content creation, distribution, and audience engagement in media and entertainment. Key applications include:"
       list:
@@ -135,8 +135,8 @@ benifits:
         - Deep fake detection and content authenticity verification
         - Automated video editing and post-production
         - Audience sentiment analysis and trend prediction
-      color: "#E545FF"
-      icon: barChart  #icon package react-feather-icon [https://feathericons.com]
+      color: "#BD10E0"
+      icon: film  #icon package react-feather-icon [https://feathericons.com]
 # career single sidebar
 sidebar_list:
   title: Apply today
