`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/pages/components/accordion.mdx
+++ b/src/pages/components/accordion.mdx
@@ -10,7 +10,7 @@ draft: false
       <section class="px-6 py-14">
         <div class="flex flex-row flex-wrap items-center justify-between">
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">We craft tailored AI strategies aligned with your business goals and industry-specific needs, ensuring a roadmap for successful AI implementation and integration.</h5>
+            <h2 class="text-xl lg:text-3xl leading-6">We craft tailored AI strategies aligned with your business goals and industry-specific needs, ensuring a roadmap for successful AI implementation and integration.</h2>
             <ul class="mt-4 text-md leading-6">
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Customized AI roadmap for your business</li>
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Alignment with industry trends and best practices</li>
@@ -19,7 +19,8 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">Use Case</h5>
+            <img class="rounded-xl my-8" src="/public/images/services/services-1.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 01. GenAI Strategy Development" />
+            <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               For a major e-commerce retailer, we developed a GenAI strategy that included personalized recommendation systems, inventory optimization, and customer service chatbots, resulting in a 30% increase in sales and 40% improvement in customer satisfaction.
             </p>
@@ -33,7 +34,7 @@ draft: false
       <section class="px-6 py-14">
         <div class="flex flex-row flex-wrap items-center justify-between">
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">We implement advanced language models for tasks such as content generation, sentiment analysis, and chatbots, enhancing communication and data processing capabilities.</h5>
+            <h2 class="text-xl lg:text-3xl leading-6">We implement advanced language models for tasks such as content generation, sentiment analysis, and chatbots, enhancing communication and data processing capabilities.</h2>
             <ul class="mt-4 text-md leading-6">
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Advanced text analysis and understanding</li>
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Automated content generation</li>
@@ -42,7 +43,8 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">Use Case</h5>
+            <img class="rounded-xl my-8" src="/public/images/services/services-2.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 02. Natural Language Processing (NLP) Solutions" />
+            <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               We developed an NLP-powered customer service chatbot for a telecommunications company, reducing response times by 80% and improving first-contact resolution rates by 60%.
             </p>
@@ -56,7 +58,7 @@ draft: false
     <section class="px-6 py-14">
       <div class="flex flex-row flex-wrap items-center justify-between">
         <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-          <h5 class="text-lg leading-6">We develop AI systems for image and video analysis, object detection, and visual content generation, opening new possibilities in various industries.</h5>
+          <h2 class="text-xl lg:text-3xl leading-6">We develop AI systems for image and video analysis, object detection, and visual content generation, opening new possibilities in various industries.</h2>
           <ul class="mt-4 text-md leading-6">
             <li class="text-gray-900 font-light"><span className="text-primary">•</span> Real-time image and video analysis</li>
             <li class="text-gray-900 font-light"><span className="text-primary">•</span> Object detection and classification</li>
@@ -65,7 +67,8 @@ draft: false
           </ul>
         </div>
         <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-          <h5 class="text-lg leading-6">Use Case</h5>
+          <img class="rounded-xl my-8" src="/public/images/services/services-3.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 03. Computer Vision Applications" />
+          <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
           <p class="mt-4 text-md leading-6">
             For a manufacturing client, we implemented a computer vision system for quality control, reducing defects by 40% and increasing production efficiency by 25%.
           </p>
@@ -79,7 +82,7 @@ draft: false
       <section class="px-6 py-14">
         <div class="flex flex-row flex-wrap items-center justify-between">
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">We utilize GenAI for advanced data analysis and predictive modeling, helping businesses make data-driven decisions and anticipate future trends.</h5>
+            <h2 class="text-xl lg:text-3xl leading-6">We utilize GenAI for advanced data analysis and predictive modeling, helping businesses make data-driven decisions and anticipate future trends.</h2>
             <ul class="mt-4 text-md leading-6">
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Advanced data analysis techniques</li>
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Accurate forecasting models</li>
@@ -88,7 +91,8 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">Use Case</h5>
+          <img class="rounded-xl my-8" src="/public/images/services/services-4.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 04. Predictive Analytics and Forecasting" />
+            <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               We developed a predictive analytics model for a retail chain, improving inventory management and reducing stock outs by 35%, while increasing overall sales by 20%.
             </p>
@@ -102,7 +106,7 @@ draft: false
       <section class="px-6 py-14">
         <div class="flex flex-row flex-wrap items-center justify-between">
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">We integrate GenAI into existing workflows to enhance efficiency and reduce manual tasks, streamlining operations across your organization.</h5>
+            <h2 class="text-xl lg:text-3xl leading-6">We integrate GenAI into existing workflows to enhance efficiency and reduce manual tasks, streamlining operations across your organization.</h2>
             <ul class="mt-4 text-md leading-6">
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Workflow optimization</li>
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Reduction of manual tasks</li>
@@ -111,7 +115,8 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">Use Case</h5>
+          <img class="rounded-xl my-8" src="/public/images/services/services-5.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 05. Process Automation with AI" />
+            <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               For a logistics company, we implemented an AI-driven process automation system, reducing order processing time by 70% and minimizing errors by 90%.
             </p>
@@ -125,7 +130,7 @@ draft: false
       <section class="px-6 py-14">
         <div class="flex flex-row flex-wrap items-center justify-between">
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">We create AI-driven systems for personalized user experiences and recommendations, enhancing customer engagement and satisfaction.</h5>
+            <h2 class="text-xl lg:text-3xl leading-6">We create AI-driven systems for personalized user experiences and recommendations, enhancing customer engagement and satisfaction.</h2>
             <ul class="mt-4 text-md leading-6">
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Tailored user experiences</li>
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Improved customer engagement</li>
@@ -134,7 +139,8 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">Use Case</h5>
+          <img class="rounded-xl my-8" src="/public/images/services/services-6.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 06. Personalization Engines" />
+            <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               We developed a personalization engine for a streaming service, resulting in a 50% increase in user engagement and a 40% reduction in churn rate.
             </p>
@@ -148,7 +154,7 @@ draft: false
       <section class="px-6 py-14">
         <div class="flex flex-row flex-wrap items-center justify-between">
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">We implement GenAI solutions for automated design processes and creative content generation, revolutionizing the creative industry.</h5>
+            <h2 class="text-xl lg:text-3xl leading-6">We implement GenAI solutions for automated design processes and creative content generation, revolutionizing the creative industry.</h2>
             <ul class="mt-4 text-md leading-6">
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Automated design suggestions</li>
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Content generation for marketing materials</li>
@@ -157,7 +163,8 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">Use Case</h5>
+          <img class="rounded-xl my-8" src="/public/images/services/services-7.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 07. AI-Assisted Design and Creative Tools" />
+            <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               For a marketing agency, we implemented AI-assisted design tools that increased creative output by 200% and reduced design iteration time by 60%.
             </p>
@@ -171,7 +178,7 @@ draft: false
       <section class="px-6 py-14">
         <div class="flex flex-row flex-wrap items-center justify-between">
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">We use GenAI to create diverse datasets for improved AI model training, enhancing the performance and reliability of AI systems.</h5>
+            <h2 class="text-xl lg:text-3xl leading-6">We use GenAI to create diverse datasets for improved AI model training, enhancing the performance and reliability of AI systems.</h2>
             <ul class="mt-4 text-md leading-6">
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Creation of diverse, synthetic datasets</li>
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Improved model performance and generalization</li>
@@ -180,7 +187,8 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">Use Case</h5>
+          <img class="rounded-xl my-8" src="/public/images/services/services-8.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 08. Data Augmentation and Synthetic Data Generation" />
+            <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               For a healthcare AI project, we used synthetic data generation to create a diverse dataset of medical images, improving diagnostic accuracy by 25% while maintaining patient privacy.
             </p>
@@ -194,7 +202,7 @@ draft: false
       <section class="px-6 py-14">
         <div class="flex flex-row flex-wrap items-center justify-between">
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">We customize pre-trained models for specific business use cases and performance enhancement, ensuring optimal AI performance for your unique needs.</h5>
+            <h2 class="text-xl lg:text-3xl leading-6">We customize pre-trained models for specific business use cases and performance enhancement, ensuring optimal AI performance for your unique needs.</h2>
             <ul class="mt-4 text-md leading-6">
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Customization of state-of-the-art AI models</li>
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Performance optimization for specific use cases</li>
@@ -203,7 +211,8 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">Use Case</h5>
+          <img class="rounded-xl my-8" src="/public/images/services/services-9.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 09. AI Model Fine-tuning and Optimization" />
+            <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               We fine-tuned a large language model for a legal tech company, improving contract analysis accuracy by 40% and reducing processing time by 60%.
             </p>
@@ -217,7 +226,7 @@ draft: false
       <section class="px-6 py-14">
         <div class="flex flex-row flex-wrap items-center justify-between">
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">We develop AI systems for image and video analysis, object detection, and visual content generation, opening new possibilities in various industries.</h5>
+            <h2 class="text-xl lg:text-3xl leading-6">We develop AI systems for image and video analysis, object detection, and visual content generation, opening new possibilities in various industries.</h2>
             <ul class="mt-4 text-md leading-6">
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Ethical AI framework development</li>
               <li class="text-gray-900 font-light"><span className="text-primary">•</span> Bias detection and mitigation</li>
@@ -226,7 +235,8 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">Use Case</h5>
+          <img class="rounded-xl my-8" src="/public/images/services/services-10.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 10. Ethical AI and Governance" />
+            <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               We developed an ethical AI governance framework for a financial institution, ensuring fair lending practices and improving regulatory compliance while maintaining high performance in credit risk assessment.
             </p>
