`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/pages/components/accordion.mdx
+++ b/src/pages/components/accordion.mdx
@@ -19,7 +19,7 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <img class="rounded-xl my-8" src="/public/images/services/services-1.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 01. GenAI Strategy Development" />
+            <img class="rounded-xl my-8" src="https://media.myparcero.com/services-1.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 01. GenAI Strategy Development" />
             <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               For a major e-commerce retailer, we developed a GenAI strategy that included personalized recommendation systems, inventory optimization, and customer service chatbots, resulting in a 30% increase in sales and 40% improvement in customer satisfaction.
@@ -43,7 +43,7 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <img class="rounded-xl my-8" src="/public/images/services/services-2.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 02. Natural Language Processing (NLP) Solutions" />
+            <img class="rounded-xl my-8" src="https://media.myparcero.com/services-2.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 02. Natural Language Processing (NLP) Solutions" />
             <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               We developed an NLP-powered customer service chatbot for a telecommunications company, reducing response times by 80% and improving first-contact resolution rates by 60%.
@@ -67,7 +67,7 @@ draft: false
           </ul>
         </div>
         <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-          <img class="rounded-xl my-8" src="/public/images/services/services-3.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 03. Computer Vision Applications" />
+          <img class="rounded-xl my-8" src="https://media.myparcero.com/services-3.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 03. Computer Vision Applications" />
           <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
           <p class="mt-4 text-md leading-6">
             For a manufacturing client, we implemented a computer vision system for quality control, reducing defects by 40% and increasing production efficiency by 25%.
